# qms-bakery

./: .env.example  .gitignore  01-architectural-functional-plan.md  01-plan-architektoniczny-funkcjonalny.md  02-architecture-diagrams.md  02-diagramy-architektury.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  auth.py  extensions.py  i18n.py  seeds.py
app/blueprints/: admin.py  api.py  auth.py  dashboard.py  haccp.py  reports.py  salsa.py  tickets.py
app/jobs/: webhook.py
app/models/: __init__.py  _base.py  audit.py  auth.py  haccp.py  production.py  salsa.py  tickets.py  triggers.py
app/mqtt/: bridge.py
app/services/: audit.py  haccp.py  queue.py  reports.py  salsa.py  stream.py  tickets.py  totp.py  trigger_state.py  triggers.py
app/static/css/: app.css
app/templates/: base.html
app/templates/admin/: audit_list.html  index.html  triggers_list.html  users_form.html  users_list.html
app/templates/auth/: login.html  login_2fa.html  totp_enroll.html
app/templates/dashboard/: index.html
app/templates/haccp/: detail.html  list.html
app/templates/reports/: base.html  (+2 more)
app/translations/: en.json  pl.json
app/workers/: rq_worker.py  trigger_worker.py
migrations/versions/: 6a3fd71b5fe8_baseline.py
tests/: conftest.py  test_admin.py  test_audit.py  test_auth.py  test_haccp.py  test_i18n.py  test_models.py  test_mqtt_bridge.py  test_reports.py  test_responder_webhook.py  test_salsa.py  test_stream.py  test_tickets.py  test_totp.py  test_trigger_duration.py  test_trigger_worker.py  test_triggers.py  test_webhook_job.py
(+5 files in other folders)
