[project]
name = "quality-qms"
version = "0.1.0"
description = "Quality Management System for UK food production (FSA/SALSA/HACCP)"
requires-python = ">=3.12"
authors = [{ name = "AmigoUK", email = "coders@attv.uk" }]
dependencies = [
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-babel>=4.0.0",
    "flask-wtf>=1.2.1",
    "flask-migrate>=4.0.7",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
    "redis>=5.0.7",
    "rq>=1.16.2",
    "pyotp>=2.9.0",
    "babel>=2.16.0",
    "paho-mqtt>=2.1.0",
    "weasyprint>=62",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-flask>=1.3.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.1",
    "freezegun>=1.5.1",
    "ruff>=0.6.0",
    "fakeredis>=2.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:flask_login.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
